# feature_odom

./: CMakeLists.txt  README.md  package.xml
include/: directTracker.h  featureMatchOdom.h  frame.h  lkFeatureTracker.h  optimization.h  orbFeatureMatcher.h  param.h
launch/: demo.launch
rviz/: feature_match_odom.rviz
src/: directTracker.cpp  featureMatchOdom.cpp  feature_match_odom_node.cpp  frame.cpp  lkFeatureTracker.cpp  optimization.cpp  orbFeatureMatcher.cpp
test/: prepare_images_for_labling.cpp  prepare_images_with_odom.cpp  prepare_test_data_for_ba.cpp  test_orb_feature_match_lib_node.cpp  test_orb_feature_match_node.cpp  test_performance.cpp  test_subscribe_compressed_image_node.cpp
